--- a/home.css
+++ b/home.css
@@ -4,11 +4,13 @@ body, html {
     font-family: "Roboto", system-ui;
     font-weight: 100;
     font-style: normal;
+    background-color: #ebebeb;
 }
 
 main{
-    background-color: #ebebeb;
-    margin-right: auto;
+    margin: 0 auto;
+    width: 90%; 
+    text-align: center;
 }
 
 body{
@@ -26,6 +28,11 @@ h1{
 }
 h4{
     font-size: 16px;
+
+}
+
+h6{
+    font-size: 16px;
 }
 
 p{
@@ -42,12 +49,7 @@ p{
     height: 50px;
     align-items: center;
     border-radius: 5px;
-    margin-bottom: 10%;
-
-    
-    
-    
-    
+    margin-bottom: 10%; 
 }
 
 .buger_menu1{
@@ -55,3 +57,84 @@ p{
     flex-direction: row;
     justify-content: center;
 }
+
+.Section_ultima_visita{
+
+    .product{
+        padding: 0%;
+        width: 240px;
+        margin: 0 auto; 
+        background-color: white;
+        padding: 0px 15px 0px 15px;
+        
+    }
+}
+
+.detalles{
+    text-align: start;
+    margin-left: 10px;
+    border-top: solid 1px #ebebeb;
+
+    h6{
+        color: #39b54a;
+    }
+
+    i{
+        border-radius: 50%;
+        color: #39b54a;
+        border: solid 1px #39b54a;
+        height: 8vh;
+        width: 8vh;
+        display: flex;               
+        justify-content: center;       
+        align-items: center;           
+        
+    }
+}
+.Section_ofertas{
+    .product{
+        padding: 0%;
+        width: 240px;
+        margin: 0 auto; 
+        background-color: white;
+        padding: 0px 15px 0px 15px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .buger_menu1{
+        display: none;
+    }
+    .product{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+}
+@media (min-width: 1024px){
+    .buger_menu1{
+        display: none;
+    }
+    .product{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+}
+
+@media (max-width: 767px){
+    .header__nav{
+        display: none;
+    }
+    main p{
+        display: none;
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+
